:art: Change name of the repo + chance tab title

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://VirThomas.github.io/myCV",
+  "homepage": "http://VirThomas.github.io/webcv",
   "name": "cvthomas",
   "version": "0.1.0",
   "private": true,
